// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VueExample > renders correctly 1`] = `
"<div data-v-54d51888="" class="card">
  <div data-v-54d51888="" class="card-header d-flex bg-white justify-content-between">
    <ul data-v-54d51888="" class="nav nav-pills">
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link active">Example</a></li>
    </ul>
    <ul data-v-54d51888="" class="nav nav-pills justify-content-end">
      <!--v-if-->
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <polyline data-v-54d51888="" points="7 8 3 12 7 16"></polyline>
            <polyline data-v-54d51888="" points="17 8 21 12 17 16"></polyline>
            <line data-v-54d51888="" x1="14" y1="4" x2="10" y2="20"></line>
          </svg>
          <!--v-if-->
          <!--v-if-->Template
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <line x1="9" y1="9" x2="10" y2="9" data-v-54d51888=""></line>
            <line x1="9" y1="13" x2="15" y2="13" data-v-54d51888=""></line>
            <line x1="9" y1="17" x2="15" y2="17" data-v-54d51888=""></line>
          </svg>
          <!--v-if-->Script
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">
          <!--v-if-->
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <path d="M10 13l-1 2l1 2" data-v-54d51888=""></path>
            <path d="M14 13l1 2l-1 2" data-v-54d51888=""></path>
          </svg>Style
        </a></li>
      <li data-v-54d51888="" class="d-flex align-items-center"><a data-v-54d51888="" href="#" class="ml-2 mr-n2 expand-collapse leading-none"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <path data-v-54d51888="" d="M9 10l3 -3l3 3"></path>
            <path data-v-54d51888="" d="M9 14l3 3l3 -3"></path>
          </svg></a></li>
    </ul>
  </div>
  <div data-v-54d51888="" class="card-body">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!---->
  </div>
</div>"
`;

exports[`VueExample > renders the script section 1`] = `
"<div data-v-54d51888="" class="card">
  <div data-v-54d51888="" class="card-header d-flex bg-white justify-content-between">
    <ul data-v-54d51888="" class="nav nav-pills">
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">Example</a></li>
    </ul>
    <ul data-v-54d51888="" class="nav nav-pills justify-content-end">
      <!--v-if-->
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <polyline data-v-54d51888="" points="7 8 3 12 7 16"></polyline>
            <polyline data-v-54d51888="" points="17 8 21 12 17 16"></polyline>
            <line data-v-54d51888="" x1="14" y1="4" x2="10" y2="20"></line>
          </svg>
          <!--v-if-->
          <!--v-if-->Template
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link active">
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <line x1="9" y1="9" x2="10" y2="9" data-v-54d51888=""></line>
            <line x1="9" y1="13" x2="15" y2="13" data-v-54d51888=""></line>
            <line x1="9" y1="17" x2="15" y2="17" data-v-54d51888=""></line>
          </svg>
          <!--v-if-->Script
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">
          <!--v-if-->
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <path d="M10 13l-1 2l1 2" data-v-54d51888=""></path>
            <path d="M14 13l1 2l-1 2" data-v-54d51888=""></path>
          </svg>Style
        </a></li>
      <li data-v-54d51888="" class="d-flex align-items-center"><a data-v-54d51888="" href="#" class="ml-2 mr-n2 expand-collapse leading-none"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <path data-v-54d51888="" d="M9 10l3 -3l3 3"></path>
            <path data-v-54d51888="" d="M9 14l3 3l3 -3"></path>
          </svg></a></li>
    </ul>
  </div>
  <div data-v-54d51888="" class="card-body">
    <!--v-if-->
    <!--v-if-->
    <div data-v-54d51888="">
      <div data-v-54d51888="" class="shiki-container shiki-javascript">&lt;script&gt;
        export default {
        name: 'TestComponentText',

        data() {
        return {
        count: 0,
        }
        },
        methods: {
        handleClick() {
        this.count++
        console.log('clicked', this.count)
        },
        },
        }
        &lt;/script&gt;</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`VueExample > renders the style section 1`] = `
"<div data-v-54d51888="" class="card">
  <div data-v-54d51888="" class="card-header d-flex bg-white justify-content-between">
    <ul data-v-54d51888="" class="nav nav-pills">
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">Example</a></li>
    </ul>
    <ul data-v-54d51888="" class="nav nav-pills justify-content-end">
      <!--v-if-->
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <polyline data-v-54d51888="" points="7 8 3 12 7 16"></polyline>
            <polyline data-v-54d51888="" points="17 8 21 12 17 16"></polyline>
            <line data-v-54d51888="" x1="14" y1="4" x2="10" y2="20"></line>
          </svg>
          <!--v-if-->
          <!--v-if-->Template
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <line x1="9" y1="9" x2="10" y2="9" data-v-54d51888=""></line>
            <line x1="9" y1="13" x2="15" y2="13" data-v-54d51888=""></line>
            <line x1="9" y1="17" x2="15" y2="17" data-v-54d51888=""></line>
          </svg>
          <!--v-if-->Script
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link active">
          <!--v-if-->
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <path d="M10 13l-1 2l1 2" data-v-54d51888=""></path>
            <path d="M14 13l1 2l-1 2" data-v-54d51888=""></path>
          </svg>Style
        </a></li>
      <li data-v-54d51888="" class="d-flex align-items-center"><a data-v-54d51888="" href="#" class="ml-2 mr-n2 expand-collapse leading-none"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <path data-v-54d51888="" d="M9 10l3 -3l3 3"></path>
            <path data-v-54d51888="" d="M9 14l3 3l3 -3"></path>
          </svg></a></li>
    </ul>
  </div>
  <div data-v-54d51888="" class="card-body">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div data-v-54d51888="">
      <div data-v-54d51888="" class="shiki-container shiki-css">&lt;style scoped&gt;
        .btn-primary {
        display: inline-block;
        font-size: 1.2rem;
        color: #fff;
        background-color: #3eaf7c;
        padding: 0.8rem 1.6rem;
        border-radius: 4px;
        transition: background-color 0.1s ease;
        box-sizing: border-box;
        border-bottom: 1px solid #389d70;
        }
        &lt;/style&gt;</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`VueExample > renders the template section 1`] = `
"<div data-v-54d51888="" class="card">
  <div data-v-54d51888="" class="card-header d-flex bg-white justify-content-between">
    <ul data-v-54d51888="" class="nav nav-pills">
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">Example</a></li>
    </ul>
    <ul data-v-54d51888="" class="nav nav-pills justify-content-end">
      <!--v-if-->
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link active"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <polyline data-v-54d51888="" points="7 8 3 12 7 16"></polyline>
            <polyline data-v-54d51888="" points="17 8 21 12 17 16"></polyline>
            <line data-v-54d51888="" x1="14" y1="4" x2="10" y2="20"></line>
          </svg>
          <!--v-if-->
          <!--v-if-->Template
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <line x1="9" y1="9" x2="10" y2="9" data-v-54d51888=""></line>
            <line x1="9" y1="13" x2="15" y2="13" data-v-54d51888=""></line>
            <line x1="9" y1="17" x2="15" y2="17" data-v-54d51888=""></line>
          </svg>
          <!--v-if-->Script
        </a></li>
      <li data-v-54d51888="" class="nav-item"><a data-v-54d51888="" href="#" class="nav-link">
          <!--v-if-->
          <!--v-if--><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path stroke="none" d="M0 0h24v24H0z" fill="none" data-v-54d51888=""></path>
            <path d="M14 3v4a1 1 0 0 0 1 1h4" data-v-54d51888=""></path>
            <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" data-v-54d51888=""></path>
            <path d="M10 13l-1 2l1 2" data-v-54d51888=""></path>
            <path d="M14 13l1 2l-1 2" data-v-54d51888=""></path>
          </svg>Style
        </a></li>
      <li data-v-54d51888="" class="d-flex align-items-center"><a data-v-54d51888="" href="#" class="ml-2 mr-n2 expand-collapse leading-none"><svg data-v-54d51888="" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <path data-v-54d51888="" stroke="none" d="M0 0h24v24H0z" fill="none"></path>
            <path data-v-54d51888="" d="M9 10l3 -3l3 3"></path>
            <path data-v-54d51888="" d="M9 14l3 3l3 -3"></path>
          </svg></a></li>
    </ul>
  </div>
  <div data-v-54d51888="" class="card-body">
    <!--v-if-->
    <div data-v-54d51888="">
      <div data-v-54d51888="" class="shiki-container shiki-vue-html">&lt;template&gt;
        &lt;p class="demo"&gt;
        &lt;button class="btn-primary" @click.prevent="handleClick"&gt;&lt;slot&gt;&lt;/slot&gt;(clicked - {{ count }})&lt;/button&gt;
        &lt;/p&gt;
        &lt;/template&gt;</div>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;
